correct button display issue on IE11

--- a/map/map.css
+++ b/map/map.css
@@ -87,6 +87,7 @@ text-align: center;
 text-decoration: none;
 font: bold 12px/25px Arial, sans-serif;
 margin: 3px 1px;
+#padding: 3px 5px;
 }
 
 .rTable {
@@ -109,7 +110,7 @@ margin: 3px 1px;
   	display: table-cell;
   	padding: 3px 10px;
   	border: 1px solid #999999;
-	width:280px;
+	width:300px;
 }
 
 
